Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,14 +76,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-8ffc5a036c4d>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-8ffc5a036c4d>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return = (constant, exponent)\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def find_term_derivative(term):\n",
     "    constant = term[0]*term[1]\n",
     "    exponent= term[1]-1\n",
-    "    return = (constant, exponent)"
+    "    return (constant, exponent)"
    ]
   },
   {
