--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    derivative_terms = list(map(lambda derivative_term: find_term_derivative()))"
+    "    derivative_terms = list(map(lambda derivative_term: find_term_derivative(derivative))))"
    ]
   },
   {
