--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "def find_derivative(function_terms):\n",
     "    derivative_terms = list(map(lambda derivative_term: find_term_derivative(derivative_term), function_terms))\n",
-    "    return sum"
+    "    return list(filter())"
    ]
   },
   {
