--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    derivative_terms = list(map(lambda x: find_term_derivative(derivative_term), function_terms))\n",
+    "    derivative_terms = list(map(lambda x: find_term_derivative(x), function_terms))\n",
     "    return list(filter(sum(derivative_terms != 0 )))"
    ]
   },
