--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "def find_derivative(function_terms):\n",
     "    derivative_terms = list(map(lambda x: find_term_derivative(x), function_terms))\n",
-    "    return list(filter(lambda derivative_term: derivative_term[0] != 0 ))"
+    "    return list(filter(lambda derivative_term: derivative_term[0] != 0, derivative ))"
    ]
   },
   {
